<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/returnHomeMenu"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/returnStep"
        app:showAsAction="always" />


    <item
        android:id="@+id/Dictionary"
        android:icon="@drawable/dictionary_icon"
        android:title="@string/goToDictionaryPage"
        app:showAsAction="always" />


    <item
        android:id="@+id/RecipePage"
        android:icon="@drawable/recipe_icon"
        android:title="@string/goToRecipePage"
        app:showAsAction="always" />

    <item
        android:id="@+id/sunApp"
        android:icon="@drawable/sun_icon"
        android:title="@string/goToSunPage"
        app:showAsAction="always" />

    <item
        android:id="@+id/songApp"
        android:icon="@drawable/song_icon"
        android:title="@string/goToSongPage"
        app:showAsAction="always" />
    <item
        android:id="@+id/song_menu_about"
        android:title="@string/About_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/song_menu_help"
        android:title="@string/How_to_use_name"
        app:showAsAction="never" />

</menu>
