<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">
    <item
        android:id="@+id/action_icon"
        android:icon="@drawable/action_icon"
        android:title="Icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/sunMenu"
        android:icon="@drawable/sun_icon"
        android:title="@string/sunApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/recipeMenu"
        android:icon="@drawable/recipe_icon"
        android:title="@string/recipeApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/dictionaryMenu"
        android:icon="@drawable/dictionary_icon"
        android:title="@string/dictionaryApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/deezer"
        android:icon="@drawable/song_icon"
        android:title="@string/deezerApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/SongAbout"
        app:showAsAction="never" />
</menu>
